--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <!-- basic -->
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=6">
+<meta name="referrer" content="no-referrer-when-downgrade">
 <!-- mobile metas -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="viewport" content="initial-scale=1, maximum-scale=1">
@@ -36,7 +37,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-3">
-            <div class="logo"><a href="index.html"><img src="images/logo.png"></a></div>
+            <div class="logo"><a href="index.html"><img src="images/logo.png" alt="Capiclean Logo"></a></div>
           </div>
           <div class="col-md-9">
             <div class="menu_text">
@@ -46,7 +47,7 @@
                     <div class="padding_left0"><a href="#">Register</a>
                     <span class="padding_left0"><a href="#">Login</a></span></div>
                   </div>
-                  <div class="shoping_bag"><img src="images/search-icon.png"></div>
+                  <div class="shoping_bag"><img src="images/search-icon.png" alt="Search Icon"></div>
                 </div> 
                 <div id="myNav" class="overlay">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -60,7 +61,7 @@
                 </div>
                 </div>
                 <span class="navbar-toggler-icon"></span>
-                <span onclick="openNav()"><img src="images/toggle-icon.png" class="toggle_menu"></span>
+                <span onclick="openNav()"><img src="images/toggle-icon.png" class="toggle_menu" alt="Menu Toggle Icon"></span>
               </ul>
             </div>      
           </div>
@@ -74,13 +75,13 @@
             <h1 class="banner_taital">Best YOUR</h1> 
             <h1 class="banner_taital_1">house CLEAN</h1>
             <p class="banner_text">Adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim</p>
-            <div class="contact_bt"><a href="contact.html">CONTACT US<span class="contact_padding"><img src="images/contact-icon.png"></span></a></div>
+            <div class="contact_bt"><a href="contact.html">CONTACT US<span class="contact_padding"><img src="images/contact-icon.png" alt="Contact Icon"></span></a></div>
           </div>
           <div class="col-sm-2">
-            <div class="play_icon"><a href="#"><img src="images/play-icon.png"></a></div>
+            <div class="play_icon"><a href="#"><img src="images/play-icon.png" alt="Play Icon"></a></div>
           </div>
           <div class="col-sm-5">
-            <div><img src="images/img-1.png" class="image_1"></div>
+            <div><img src="images/img-1.webp" class="image_1" alt="Cleaning Service Image"></div>
           </div>
         </div>
       </div>
@@ -91,7 +92,7 @@
     <!-- services section start -->
     <div class="services_section layout_padding">
       <div class="container">
-        <h1 class="services_taital"><span>Our</span> <img src="images/icon-1.png"> <span style="color: #1f1f1f">Services</span></h1>
+        <h1 class="services_taital"><span>Our</span> <img src="images/icon-1.png" alt="Service Icon"> <span style="color: #1f1f1f">Services</span></h1>
         <p class="services_text">Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
         <div id="main_slider" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
@@ -171,12 +172,12 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <div><img src="images/img-2.png" class="image_2"></div>
+            <div><img src="images/img-2.webp" class="image_2" alt="About Cleaning Image"></div>
           </div>
           <div class="col-md-6">
-            <h1 class="services_taital"><span>About </span> <img src="images/icon-1.png"> <span style="color: #1f1f1f">Cleaning</span></h1>
+            <h1 class="services_taital"><span>About </span> <img src="images/icon-1.png" alt="Service Icon"> <span style="color: #1f1f1f">Cleaning</span></h1>
             <p class="ipsum_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
-            <div class="contact_bt_1"><a href="#">READ MORE<span class="contact_padding"><img src="images/contact-icon1.png"></span></a></div>
+            <div class="contact_bt_1"><a href="#">READ MORE<span class="contact_padding"><img src="images/contact-icon1.png" alt="pionter for information" ></span></a></div>
           </div>
         </div>
       </div>
@@ -185,7 +186,7 @@
     <!-- choose section start -->
     <div class="choose_section layout_padding">
       <div class="container">
-        <h1 class="choose_taital"><span>Why </span> <img src="images/icon-1.png"> <span style="color: #1f1f1f">Choose Us</span></h1>
+        <h1 class="choose_taital"><span>Why </span> <img src="images/icon-1.png" alt="Service Icon"> <span style="color: #1f1f1f">Choose Us</span></h1>
         <p class="choose_text">Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
         <div class="choose_section_2 layout_padding">
           <div class="row">
@@ -214,7 +215,7 @@
               </div>
             </div>
           </div>
-          <div class="image_3"><img src="images/img-3.png"></div>
+          <div class="image_3"><img src="images/img-3.webp" alt="Why Choose Us Image"></div>
           <div class="get_bt"><a href="#">Get A quote</a></div>
         </div>
       </div>
@@ -223,21 +224,21 @@
     <!-- team section start -->
     <div class="team_section layout_padding">
       <div class="container">
-        <h1 class="choose_taital"><span>Our </span> <img src="images/icon-1.png"> <span style="color: #1f1f1f">Team</span></h1>
+        <h1 class="choose_taital"><span>Our </span> <img src="images/icon-1.png" alt="Service Icon"> <span style="color: #1f1f1f">Team</span></h1>
         <p class="choose_text">Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
         <div class="team_section_2 layout_padding">
           <div class="container">
             <div class="images_main_1">
               <div class="row">
                 <div class="col-sm-5">
-                  <div class="image_4"><img src="images/img-4.png"></div>
+                  <div class="image_4"><img src="images/img-4.webp" alt="Iron the clothes"></div>
                   <h6 class="follow_text">Follow Us</h6>
                   <div class="follow_social_icon">
                     <ul>
-                      <li><a href="#"><img src="images/fb-icon.png"></a></li>
-                      <li><a href="#"><img src="images/twitter-icon.png"></a></li>
-                      <li><a href="#"><img src="images/linkden-icon.png"></a></li>
-                      <li><a href="#"><img src="images/instagram-icon.png"></a></li>
+                      <li><a href="#"><img src="images/fb-icon.png" alt="Facebook Icon"></a></li>
+                      <li><a href="#"><img src="images/twitter-icon.png" alt="Twitter Icon"></a></li>
+                      <li><a href="#"><img src="images/linkden-icon.png" alt="LinkedIn Icon"></a></li>
+                      <li><a href="#"><img src="images/instagram-icon.png" alt="Instagram Icon"></a></li>
                     </ul>
                   </div>
                 </div>
@@ -254,14 +255,14 @@
                   <p class="dummy_text_1">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem</p>
                 </div>
                 <div class="col-sm-5">
-                  <div class="image_4"><img src="images/img-5.png"></div>
+                  <div class="image_4"><img src="images/img-5.webp" alt="Vacumming"></div>
                   <h6 class="follow_text">Follow Us</h6>
                   <div class="follow_social_icon">
                     <ul>
-                      <li><a href="#"><img src="images/fb-icon.png"></a></li>
-                      <li><a href="#"><img src="images/twitter-icon.png"></a></li>
-                      <li><a href="#"><img src="images/linkden-icon.png"></a></li>
-                      <li><a href="#"><img src="images/instagram-icon.png"></a></li>
+                      <li><a href="#"><img src="images/fb-icon.png" alt="Facebook Icon"></a></li>
+                      <li><a href="#"><img src="images/twitter-icon.png" alt="Twitter Icon"></a></li>
+                      <li><a href="#"><img src="images/linkden-icon.png" alt="LinkedIn Icon"></a></li>
+                      <li><a href="#"><img src="images/instagram-icon.png" alt="Instagram Icon"></a></li>
                     </ul>
                   </div>
                 </div>
@@ -270,14 +271,14 @@
             <div class="images_main_1">
               <div class="row">
                 <div class="col-sm-5">
-                  <div class="image_4"><img src="images/img-6.png"></div>
+                  <div class="image_4"><img src="images/img-6.webp" alt="clean the window"></div>
                   <h6 class="follow_text">Follow Us</h6>
                   <div class="follow_social_icon">
                     <ul>
-                      <li><a href="#"><img src="images/fb-icon.png"></a></li>
-                      <li><a href="#"><img src="images/twitter-icon.png"></a></li>
-                      <li><a href="#"><img src="images/linkden-icon.png"></a></li>
-                      <li><a href="#"><img src="images/instagram-icon.png"></a></li>
+                      <li><a href="#"><img src="images/fb-icon.png" alt="Facebook Icon"></a></li>
+                      <li><a href="#"><img src="images/twitter-icon.png" alt="Twitter Icon"></a></li>
+                      <li><a href="#"><img src="images/linkden-icon.png" alt="LinkedIn Icon"></a></li>
+                      <li><a href="#"><img src="images/instagram-icon.png" alt="Instagram Icon"></a></li>
                     </ul>
                   </div>
                 </div>
@@ -294,14 +295,14 @@
                   <p class="dummy_text_1">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem</p>
                 </div>
                 <div class="col-sm-5">
-                  <div class="image_4"><img src="images/img-7.png"></div>
+                  <div class="image_4"><img src="images/img-7.webp" alt="washing the clothes"></div>
                   <h6 class="follow_text">Follow Us</h6>
                   <div class="follow_social_icon">
                     <ul>
-                      <li><a href="#"><img src="images/fb-icon.png"></a></li>
-                      <li><a href="#"><img src="images/twitter-icon.png"></a></li>
-                      <li><a href="#"><img src="images/linkden-icon.png"></a></li>
-                      <li><a href="#"><img src="images/instagram-icon.png"></a></li>
+                      <li><a href="#"><img src="images/fb-icon.png" alt="Facebook Icon"></a></li>
+                      <li><a href="#"><img src="images/twitter-icon.png" alt="Twitter Icon"></a></li>
+                      <li><a href="#"><img src="images/linkden-icon.png" alt="LinkedIn Icon"></a></li>
+                      <li><a href="#"><img src="images/instagram-icon.png" alt="Instagram Icon"></a></li>
                     </ul>
                   </div>
                 </div>
@@ -335,16 +336,16 @@
       <div class="container">
         <div class="footer_main">
           <div class="footer_left">
-            <h1 class="contact_taital"><span>Contact </span> <img src="images/icon-2.png"> <span>Us</span></h1>
+            <h1 class="contact_taital"><span>Contact </span> <img src="images/icon-2.png" alt="sweeft icon"> <span>Us</span></h1>
           </div>
           <div class="footer_left">
-            <div class="location_text"><a href="#"><img src="images/map-icon.png"><span class="padding_left_15">Locations</span></a></div>
+            <div class="location_text"><a href="#"><img src="images/map-icon.png" alt="Map Icon"><span class="padding_left_15">Locations</span></a></div>
           </div>
           <div class="footer_left">
-            <div class="location_text"><a href="#"><img src="images/call-icon.png"><span class="padding_left_15">+71 9876543210</span></a></div>
+            <div class="location_text"><a href="#"><img src="images/call-icon.png" alt="Call Icon"><span class="padding_left_15">+71 9876543210</span></a></div>
           </div>
           <div class="footer_left">
-            <div class="location_text"><a href="#"><img src="images/map-icon.png"><span class="padding_left_15">demo@gmail.com</span></a></div>
+            <div class="location_text"><a href="#"><img src="images/map-icon.png" alt="Email Icon"><span class="padding_left_15">demo@gmail.com</span></a></div>
           </div>
         </div>
         <div class="contact_section">
@@ -366,10 +367,10 @@
               </div>
               <div class="social_icon">
                 <ul>
-                  <li><a href="#"><img src="images/fb-icon1.png"></a></li>
-                  <li><a href="#"><img src="images/twitter-icon1.png"></a></li>
-                  <li><a href="#"><img src="images/linkden-icon1.png"></a></li>
-                  <li><a href="#"><img src="images/instagram-icon1.png"></a></li>
+                  <li><a href="#"><img src="images/fb-icon1.png" alt="Footer Facebook Icon"></a></li>
+                  <li><a href="#"><img src="images/twitter-icon1.png" alt="Footer Twitter Icon"></a></li>
+                  <li><a href="#"><img src="images/linkden-icon1.png" alt="Footer LinkedIn Icon"></a></li>
+                  <li><a href="#"><img src="images/instagram-icon1.png" alt="Footer Instagram Icon"></a></li>
                 </ul>
               </div>
             </div>
