--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <!-- basic -->
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=6">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="referrer" content="no-referrer-when-downgrade">
 <!-- mobile metas -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="viewport" content="initial-scale=1, maximum-scale=1">
+<meta name="viewport" content="initial-scale=1, maximum-scale=6">
 <!-- site metas -->
 <title>Capiclean</title>
 <meta name="keywords" content="">
@@ -157,10 +157,10 @@
               </div>
             </div>
           </div>
-          <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev">
+          <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev" aria-label="swipe to the left">
             <i class="fa fa-angle-left"></i>
           </a>
-          <a class="carousel-control-next" href="#main_slider" role="button" data-slide="next">
+          <a class="carousel-control-next" href="#main_slider" role="button" data-slide="next" aria-label="swipe to the right">
             <i class="fa fa-angle-right"></i>
           </a>
         </div>
@@ -362,7 +362,7 @@
             <div class="col-md-6">
               <div class="map_main">
                 <div class="map-responsive">
-                  <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=Eiffel+Tower+Paris+France" width="600" height="280" frameborder="0" style="border:0; width: 100%;" allowfullscreen></iframe>
+                  <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=Eiffel+Tower+Paris+France" width="600" height="280" frameborder="0" style="border:0; width: 100%;" title="googleframe" allowfullscreen></iframe>
                 </div>
               </div>
               <div class="social_icon">
