--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="referrer" content="no-referrer-when-downgrade">
+<meta class="discription" content="author: khanhlearnin12">
 <!-- mobile metas -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="viewport" content="initial-scale=1, maximum-scale=6">
@@ -53,7 +54,7 @@
                 </li>
               <li>
                 <div id="myNav" class="overlay">
-                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                <a href="https://khanhlearnin12.github.io/cleaning-web-page/" class="closebtn" onclick="closeNav()">&times;</a>
                 <div class="overlay-content">
                   <a href="index.html">Home</a>
                   <a href="services.html">Services</a>
