add  keyword, description, author

--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="referrer" content="no-referrer-when-downgrade">
-<meta class="description" content="author: khanhlearnin12">
 <!-- mobile metas -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="viewport" content="initial-scale=1, maximum-scale=6">
 <!-- site metas -->
 <title>Capiclean</title>
-<meta name="keywords" content="">
-<meta name="description" content="">
-<meta name="author" content=""> 
+<meta name="keywords" content="cleaninngpage">
+<meta name="description" content="cleaning-web-page">
+<meta name="author" content="khanhlearnin12"> 
 <!-- bootstrap css -->
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 <!-- style css -->
