ai plugin and openai attachment

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                     </ul>
                   </div>
                 </div>
-              </div>
+              </div>`
             </div>
             <div class="images_main_1">
               <div class="row">
