--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
               </div>
             </div>
             <div class="col-lg-3 col-sm-6">
-              <div
+              <div>
                 <h1 class="client_taital">10004+</h1>
                 <h2 class="client_text">Happy clients</h2>
               </div>
