--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
               </div>
             </div>
             <div class="col-lg-3 col-sm-6">
-              <div>
+              <div class="choose_box">
                 <h1 class="client_taital">10004+</h1>
                 <h2 class="client_text">Happy clients</h2>
               </div>
@@ -272,7 +272,7 @@
                     </ul>
                   </div>
                 </div>
-              </div>`
+              </div>
             </div>
             <div class="images_main_1">
               <div class="row">
@@ -368,7 +368,7 @@
             <div class="col-md-6">
               <div class="map_main">
                 <div class="map-responsive">
-                  <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=Eiffel+Tower+Paris+France" width="600" height="280" frameborder="0" style="border:0; width: 100%;" title="googleframe" allowfullscreen></iframe>
+                  <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=Eiffel+Tower+Paris+France" width="600" height="280" frameborder="0" style="border:0; width: 100%;" title="googleframe"></iframe>
                 </div>
               </div>
               <div class="social_icon">
@@ -403,7 +403,7 @@
     <script src="js/custom.js"></script>
     <!-- javascript --> 
     <script src="js/owl.carousel.js"></script>
-    <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
     <script>
     $(document).ready(function(){
     $(".fancybox").fancybox({
